[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
beautifulsoup4 = "^4.12.3"
discord-py = "^2.3.2"
newsapi = "^0.1.1"
pandas = "^2.2.2"
pycoingecko = "^3.1.0"
requests = "^2.32.3"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"